--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
-    "vue3-google-map": "^0.21.1"
+    "vue3-google-map": "^0.22.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
@@ -25,11 +25,11 @@
     "@vue/eslint-config-typescript": "^14.3.0",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.18.0",
-    "eslint-plugin-vue": "^9.32.0",
+    "eslint-plugin-vue": "^10.1.0",
     "jiti": "^2.4.2",
-    "npm-run-all2": "^7.0.2",
+    "npm-run-all2": "^8.0.4",
     "prettier": "^3.4.2",
-    "typescript": "~5.7.3",
+    "typescript": "^5.8.3",
     "vite": "^6.0.11",
     "vite-plugin-vue-devtools": "^7.7.0",
     "vue-tsc": "^2.2.0"
