--- a/backstage-demo/backstage-demo-catalog-info.yaml
+++ b/backstage-demo/backstage-demo-catalog-info.yaml
@@ -5,6 +5,7 @@ metadata:
   title: '@citrx/demo-plugin-docs'
   description: >-
     A demo Backstage component showcasing the SDS Workspace plugin integration wiht Citrix Secure Developer Spaces.
+spec:
   lifecycle: production
   type: backstage-frontend-plugin
   owner: citrix-team
