--- a/backstage-demo/backstage-demo-catalog-info.yaml
+++ b/backstage-demo/backstage-demo-catalog-info.yaml
@@ -8,4 +8,4 @@ metadata:
 spec:
   lifecycle: production
   type: backstage-frontend-plugin
-  owner: citrix-team
+  owner: group:default/citrix-team
