--- a/backstage-demo/backstage-demo-group-catalog-info.yaml
+++ b/backstage-demo/backstage-demo-group-catalog-info.yaml
@@ -1,4 +1,16 @@
 apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  name: demo-plugin-docs-2
+  title: '@citrix/demo-plugin-docs'
+  description: >-
+    A demo Backstage component showcasing the SDS Workspace plugin integration wiht Citrix Secure Developer Spaces.
+spec:
+  lifecycle: production
+  type: backstage-frontend-plugin
+  owner: group:default/citrix-team
+---
+apiVersion: backstage.io/v1alpha1
 kind: Group
 metadata:
   name: citrix-team
