--- a/backstage-demo/backstage-demo-catalog-info.yaml
+++ b/backstage-demo/backstage-demo-catalog-info.yaml
@@ -8,3 +8,16 @@ metadata:
 spec:
   lifecycle: production
   type: backstage-frontend-plugin
+  owner: group:default/citrix-team
+---
+apiVersion: backstage.io/v1alpha1
+kind: Group
+metadata:
+  name: citrix-team
+  namespace: default
+  title: Citrix Team
+spec:
+  type: team
+  profile:
+    displayName: Citrix Team
+  children: []
