--- a/backstage-demo/backstage-demo-catalog-info.yaml
+++ b/backstage-demo/backstage-demo-catalog-info.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: demo-plugin-docs
+  name: demo-plugin-testing
   title: '@citrix/demo-plugin-docs'
   description: >-
     A demo Backstage component showcasing the SDS Workspace plugin integration wiht Citrix Secure Developer Spaces.
