--- a/backstage-demo/backstage-demo-catalog-info.yaml
+++ b/backstage-demo/backstage-demo-catalog-info.yaml
@@ -5,3 +5,19 @@ metadata:
   title: '@citrix/demo-plugin-docs'
   description: >-
     A demo Backstage component showcasing the SDS Workspace plugin integration wiht Citrix Secure Developer Spaces.
+spec:
+  lifecycle: production
+  type: backstage-frontend-plugin
+  owner: group:default/citrix-team
+---
+apiVersion: backstage.io/v1alpha1
+kind: Group
+metadata:
+  name: citrix-team
+  namespace: default
+  title: Citrix Team
+spec:
+  type: team
+  profile:
+    displayName: Citrix Team
+  children: []
