--- a/backstage-demo/backstage-demo-location.yaml
+++ b/backstage-demo/backstage-demo-location.yaml
@@ -1,7 +1,7 @@
 apiVersion: backstage.io/v1alpha1
-kind: Location
+kind: Component
 metadata:
-  name: demo-catalog-locations
-spec:
-  type: url
-  target: https://github.com/strong-network/project-acme/blob/20251001_ad_add_backstage_component/backstage-demo/backstage-demo-catalog-info.yaml
+  name: demo-backstage-plugin
+  title: '@citrix/demo-backstage-plugin'
+  description: >-
+    A demo Backstage component showcasing the SDS Workspace plugin integration wiht Citrix Secure Developer Spaces.
