--- a/backstage-demo/backstage-demo-info.yaml
+++ b/backstage-demo/backstage-demo-info.yaml
@@ -7,3 +7,16 @@ metadata:
     A demo Backstage component showcasing the SDS Workspace plugin integration wiht Citrix Secure Developer Spaces.
 spec:
   lifecycle: production
+  owner: group:default/citrix-team
+---
+apiVersion: backstage.io/v1alpha1
+kind: Group
+metadata:
+  name: citrix-team
+  namespace: default
+  title: Citrix Team
+spec:
+  type: team
+  profile:
+    displayName: Citrix Team
+  children: []
